--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,24 @@
-# Dependencies
-node_modules/
+# build output
 dist/
-.turbo/
+# generated types
+.astro/
 
-# Environment variables
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
 .env
 .env.production
-.env.local
 
-# Logs and cache
-.cache/
-.log
-*.log
-
-# OS/Editor files
+# macOS-specific files
 .DS_Store
+
+# jetbrains setting folder
 .idea/
-.vscode/
-*.swp
-*.swo
-
-# Obsidian settings (optional: ignore if you don't want to sync Obsidian configs)
-.obsidian/
-
-# Astro build output
-.server/
