--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "^5.2.5",
+    "astro-embed": "^0.9.0",
+    "astro-icon": "^1.1.5",
+    "flowbite": "^3.1.1",
+    "fulldev-ui": "^0.6.4",
+    "tailwindcss": "^4.0.3"
   }
 }
