--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@sentry/astro": "^8.54.0",
+    "@spotlightjs/astro": "^2.4.3",
     "@tailwindcss/vite": "^4.0.3",
     "astro": "^5.2.5",
+    "astro-breadcrumbs": "^3.3.1",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "astro-purgecss": "^5.1.0",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.4",
     "flowbite": "^3.1.1",
     "fulldev-ui": "^0.6.4",
+    "purgecss": "^7.0.2",
     "tailwindcss": "^4.0.3"
+  },
+  "devDependencies": {
+    "sass": "^1.84.0"
   }
 }
