--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "beneficial-bar",
+  "name": "token-theme",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "fmt": "prettier . -w"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.8",
+    "@astrojs/mdx": "^4.0.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@sentry/astro": "^8.54.0",
-    "@spotlightjs/astro": "^2.4.3",
-    "@tailwindcss/vite": "^4.0.3",
-    "astro": "^5.2.5",
-    "astro-breadcrumbs": "^3.3.1",
-    "astro-embed": "^0.9.0",
-    "astro-icon": "^1.1.5",
-    "astro-purgecss": "^5.1.0",
-    "astro-robots-txt": "^1.0.0",
-    "astro-seo": "^0.8.4",
-    "flowbite": "^3.1.1",
-    "fulldev-ui": "^0.6.4",
-    "purgecss": "^7.0.2",
-    "tailwindcss": "^4.0.3"
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.3",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "sass": "^1.84.0"
+    "@tailwindcss/typography": "^0.5.16",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
