--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "fmt": "prettier . -w"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/mdx": "^4.0.8",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
